--- a/kubernetes/statefulset.yaml
+++ b/kubernetes/statefulset.yaml
@@ -4,7 +4,7 @@ metadata:
   name: postgres
 spec:
   serviceName: postgres
-  replicas: 2 # para cada app (legacy y microservicio)
+  replicas: 1
   selector:
     matchLabels:
       app: postgres
